# Axiom

./: CMakeLists.txt  README.md
include/axiom/: core.hpp
include/axiom/core/: assert.hpp  core.hpp
include/axiom/io/: print.hpp
include/axiom/linalg/: decomposition.hpp  mat.hpp  ops.hpp  vec.hpp
include/axiom/opt/: gd.hpp  linsearch.hpp
src/axiom/: axiom.cpp
tests/axiom/core/: core_spec.cpp
